# opd_bot

./: docker-compose.yml  pyproject.toml
src/: Dockerfile  config.py  constants.py  dto.py  handlers.py  main.py  persistence.py  questions.json  tg_lib.py
src/storage/: base.py  redis.py
